Changes to core settings page, and a few other styles tweaks

--- a/app/assets/stylesheets/_components.scss
+++ b/app/assets/stylesheets/_components.scss
@@ -396,17 +396,19 @@ ul.samples {
 .items-editor {
 
   ul {
-    border-right: 1px solid $gray1;
-    padding-bottom: 25px;
+    background:#ececec;
+    border:1px solid #e2e2e2;
+    margin-left:15px;
 
     li {
       display: block;
       vertical-align: baseline;
-      padding-bottom: 15px;
-      margin-bottom: 10px;
+      padding:10px 15px;
+      border-bottom:1px solid #e2e2e2;
 
       &.selected {
-        border-right: 4px solid $black;
+        background:#ffffff;
+        color:#333;
       }
       .resource-type {
         font-weight: 700;
@@ -426,7 +428,6 @@ ul.samples {
         font-size: 80%;
         color: $gray3;
         font-style: italic;
-        padding-left: 30px;
       }
     }
 
@@ -437,6 +438,10 @@ ul.samples {
 
     &.selected {
       display: inherit;
+      background:#ffffff;
+      border:1px solid #e2e2e2;
+      padding:0px 15px;
+      margin:0px 15px;
     }
   }
 
