--- a/app/views/alert_groups/_filters.html.haml
+++ b/app/views/alert_groups/_filters.html.haml
@@ -1,15 +1,12 @@
 - content_for(:subheader) do
 
-  .row.center.filters
-    .col.pe-10
-      .row
-        .col
-          %h1
-            - if @can_create
-              = link_to "+", new_alert_group_path, class: 'btn-add side-link fix', title: 'Add Alert'
-              Alert groups
-              
-      %form#filters-form{action: alerts_path, "data-auto-submit" => true}
-        %input{type: "hidden", name: "page_size", value: @page_size}
-        .row
-          .filter
+  .filterbar.filterbartest
+    .heading
+      .title
+        %h3
+          Alert groups
+    .topfilteropt
+      - if @can_create
+        = link_to "+", new_alert_group_path, class: 'btn-add side-link fix', title: 'Add Alert'
+  %form#filters-form.filteroptions{action: alerts_path, "data-auto-submit" => true}
+    %input{type: "hidden", name: "page_size", value: @page_size}
