--- a/app/views/roles/_filters.haml
+++ b/app/views/roles/_filters.haml
@@ -1,15 +1,15 @@
 - content_for(:subheader) do
-  .row.center.filters
-    .col.pe-10
-      .row
-        .col
-          %h1
-            - if @can_create
-              = link_to "+", new_role_path, class: 'btn-add side-link fix', title: 'Add Role'
-            Roles
-      %form#filters-form{action: roles_path, "data-auto-submit" => true}
-        %input{type: "hidden", name: "page_size", value: @page_size}
-        .row
-          .filter
-            %label.block Name
-            %input{type: "text", name: "name", value: params["name"]}
+  .filterbar.filterbartest
+    .heading
+      .title
+        Roles
+    .topfilteropt
+      - if @can_create
+        = link_to "Add Roles", new_role_path, class: 'btn-add side-link fix', title: 'Add Role'
+  %form#filters-form.filteroptions{action: roles_path, "data-auto-submit" => true}
+    %input{type: "hidden", name: "page_size", value: @page_size}
+    .row.custom_filters
+      .advanced
+        .filter
+          %label.block Name
+          %input{type: "text", name: "name", value: params["name"]}
