--- a/app/views/roles/new.haml
+++ b/app/views/roles/new.haml
@@ -1,11 +1,9 @@
 - content_for(:subheader) do
-  .row.center.add-new
+  .row.center.add-new.collapse
     .col.pe-10
-      .row
-        .col
-          %h2
-            = link_to roles_path, class: 'side-link', title: I18n.t('views.back') do
-              = image_tag "arrow-left-white.png"
-            New Role
-
-= render 'form'
+      %h2
+        = link_to roles_path, class: 'side-link', title: I18n.t('views.back') do
+          = image_tag "arrow-left-white.png"
+        New Role
+  .testflow
+    = render 'form'
