Split Diagnoses into two separate references for the droplist and radio, from the single hash (2003)

--- a/app/views/episodes/_form.haml
+++ b/app/views/episodes/_form.haml
@@ -45,7 +45,7 @@
       .col-6
         = f.label :diagnosis
       .col-6
-        = f.collection_select :diagnosis, Episode.diagnosis_options, :id, :name, include_blank: I18n.t('select.default')
+        = f.collection_select :diagnosis, Episode.general_diagnosis_options, :id, :name, include_blank: I18n.t('select.default')
     .row
       .col-6
         = f.label :anatomical_site_diagnosis
