--- a/app/views/test_results/_device_results.haml
+++ b/app/views/test_results/_device_results.haml
@@ -2,7 +2,7 @@
 
 .row.paginationHeader
   .col
-    - if @tests.empty?
+    - if @total == 0
       = empty_data icon: 'icon-outline-test xx-large' do |c|
         - c.body do
           %h1
@@ -17,9 +17,9 @@
             %h3
               = I18n.t('test_results.index.test_result', count: @total)
             %span.table-actions
-              = link_to test_results_path(@filter.merge(format: :csv)), title: I18n.t('test_results.index.test', count: @total) do
+              = link_to test_results_path(@device_results.filter.merge(format: :csv)), title: I18n.t('test_results.index.test', count: @total) do
                 %span.icon-download.icon-gray
           .box-content
-            = react_component "TestResultsList", testResults: @json, orderBy: @order_by, showSites: @show_sites, showDevices: @show_devices
+            = react_component "TestResultsList", testResults: @device_results.json, orderBy: @device_results.order_by, showSites: @show_sites, showDevices: @show_devices
             .pagination
               = render 'shared/pagination'
