--- a/app/assets/stylesheets/_newdash.scss
+++ b/app/assets/stylesheets/_newdash.scss
@@ -214,7 +214,7 @@ body {
 
 @media only screen and (max-width: 480px) {
   .container fieldset {
-    margin-top: 0.5em;
+    margin-top: 0.5em; 
   }
 }
 
@@ -254,7 +254,6 @@ body {
   border: none;
   border-bottom: 1px solid white;
   border-radius: 0;
-  -webkit-appearance: none;
   color: rgba(255,255,255,0.6);
    padding: 0 0 0.5em 0.9em;
 }
@@ -287,7 +286,7 @@ body {
 
 #contentcontainer tr:nth-child(even) {
   background-color: #dbdae2;
-}
+} 
 
 #contentcontainer tr:nth-child(even):hover {
   opacity:0.8;
@@ -310,7 +309,7 @@ body {
 .container .col-4 {min-width: 31.26%;flex:1 1 31.26%;}
 .container .col-3 {min-width: 22.8%;flex:1 1 22.8%;}
 .container .col-2{min-width: 14.33%;flex:1 1 14.33%;}
-.container .col-1 {min-width: 5.866%;flex:1 1 5.866%;}
+.container .col-1 {min-width: 5.866%;flex:1 1 5.866%;} 
 
 
 
@@ -463,11 +462,15 @@ padding:3px 80px 3px 5px;
 }
 
 #filters-form .Select {
-  border-bottom:none;
+  border:none;
 }
 
 #filters-form .Select-arrow {
   top:10px;
+}
+
+#filters-form .Select-control {
+  padding:8px 120px 8px 0px;
 }
 
 .section #filters-form fieldset {
@@ -484,7 +487,7 @@ padding:3px 80px 3px 5px;
 min-width:100% !important;
 }
 
-/* Dashboard Styles */
+/* Dashboard Styles */ 
 #contentcontainer .row .columns div.search {height:40px;background:#e06023;position:fixed;top:0px;width:100%;left:300px;top:60px;z-index:999;}
 #contentcontainer .dashboard main {margin-top:50px;}
 .dashboard {padding:10px;}
@@ -539,7 +542,7 @@ margin-bottom: 20px;
   .card {
     margin:10px 15px;
   }
-}
+} 
 form#new_device {
   margin:0px;
   padding:0px;
@@ -589,12 +592,46 @@ form#new_device {
   padding:15px;
 }
 
+form#new_microscopy_result, form#new_site, form#edit_site_2, form#new_episode, form#edit_episode_2,  form#edit_device_model_8{
+  .row {
+    align-items:flex-start;
+  }
+  .row.labelHeader {align-items:center;}
+
+  label {
+    margin-bottom:0px;
+  }
+
+  .button-actions {
+    position:absolute;
+    margin:0px;
+    top:5px;
+    right:10px;
+
+     a.btn-link {
+      background:#e06023;
+      padding:0 24px;
+      height:30px;
+      line-height:30px;
+      margin-left:7px;
+      color:#fff;
+    }
+
+    a.pull-right {
+      margin-left:10px;
+      background:#333;
+    }
+
+    input:hover, .btn-link:hover {opacity:0.8;cursor:pointer;}
+  }
+}
+
 /* Side Nav */
 .sites-tree-view {
   li button {top:0px;left:3px;}
   .selected::before {height:29px;}
   li {font-size:12px;line-height:30px;}
-}
+} 
 
 .show-navigation-context-picker #context_side_bar ::-webkit-input-placeholder, .show-navigation-context-picker #context_side_bar ::-webkit-input-placeholder {color:#fff;}
 .show-navigation-context-picker #context_side_bar .search-sites {background:#555 !important;color:#fff !important;}
@@ -912,13 +949,13 @@ form#new_device {
   }
 }
 
-.testflow ul.tabs li a {
+.testflow ul.tab li a {
   font-size:12px!important;
 }
 
 section.newPatientContainer, section.editPatientContainer, .optionsarea {
   padding:10px 20px 10px 15px;
-}
+} 
 .optionsarea {
   padding:10px 20px 10px 15px;
 
@@ -950,6 +987,10 @@ form#new_patient, form.edit_patient{
       border:1px solid #e2e2e2;
       width:200px;
     }
+    select#patient_birth_date_on_3i, select#patient_birth_date_on_2i, select#patient_birth_date_on_1i {
+      width:auto;
+      margin-right:5px;
+    } 
   }
 
   .row.header {
@@ -963,9 +1004,10 @@ form#new_patient, form.edit_patient{
   }
 
   .value {
-    line-height:40px;
+    line-height:30px;
+    width:200px;
   }
-
+  
   input.input-large {
     border:1px solid #e2e2e2;
     background:#fff;
@@ -992,10 +1034,9 @@ form#new_patient, form.edit_patient{
       a.btn-secondary {
         background:#cc443f
       }
-  }
-
-  div.row:nth-child(even), div .row {
-    background:#dbdae2;
+      span.btn-link.not-allowed {
+        margin-left:10px;
+      }
   }
 
   div.row {
@@ -1029,14 +1070,11 @@ form#new_patient, form.edit_patient{
   }
 }
 
-form.edit_patient div.row:nth-child(odd){
-  background:#dbdae2;
-}
 form.edit_patient div.row:nth-child(even), form.edit_patient div .row {
   background:#fff;
 }
 
-/* Test Results Styles */
+/* Test Results Styles */ 
 #contentcontainer #contentsection .filterbar {
   height:40px;
   float:none;
@@ -1158,7 +1196,7 @@ form#filters-form.filteroptions {
       padding:0px 120px 0px 0px;
     }
   }
-}
+} 
 
 #contentsection table {
   margin:0px;
@@ -1260,6 +1298,7 @@ tbody {background:#fff;}
   a[class^="btn"], .has-value > .Select-control > .Select-placeholder, input[type="text"], span {
     color:#fff;
     opacity:1;
+    border:none;
   }
 
   .input-x-small {
@@ -1277,6 +1316,7 @@ tbody {background:#fff;}
   .text-right {
     padding:0px 3px 0px 0px;
     margin-left:2px;
+    width:15px;
   }
 
   .Select-control {
@@ -1545,7 +1585,7 @@ html {
         -ms-flex: 0 0 100%;
             flex: 0 0 100%;
     max-width: 100%; }}
-
+  
 #contentcontainer header img{
 height:20px;
 width:auto !important;
@@ -1585,7 +1625,7 @@ display:none;
 font-size:12px;
 }
 
-.add-new, #contentsection .devicearea .add-new{
+.add-new, #contentsection .devicearea .add-new{ 
 background:#e06023;
 }
 
@@ -1650,30 +1690,16 @@ div#new-xpert-results section.row {
   }
 }
 
-form#new_microscopy_result {
-  .row {
-    align-items:center;
-  }
 
-  label {
-    margin-bottom:0px;
+#contentcontainer .deviceModels {
+  h2 {
+    padding-left:15px;
   }
-
-  .button-actions {
+  a {
     position:absolute;
-    margin:0px;
     top:5px;
     right:10px;
-
-     a.btn-link {
-      background:#e06023;
-      padding:0 24px;
-      height:30px;
-      line-height:30px;
-      margin-left:7px;
-      color:#fff;
-    }
-
-    input:hover, .btn-link:hover {opacity:0.8;cursor:pointer;}
+    font-weight:bold!important;
+    padding:0 24px;
   }
 }
