--- a/app/assets/stylesheets/_testflow.scss
+++ b/app/assets/stylesheets/_testflow.scss
@@ -108,6 +108,11 @@
   }
 }
 
+.cformatIndented
+{
+  margin-left: 40px;
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
@@ -295,7 +300,7 @@ body {
     line-height: 1em;
     text-decoration: none;
     margin-left: 5px;
-  margin-right: 10px;
+	margin-right: 10px;
     &.save, &.new {
       background: #2196f3;
     }
@@ -374,7 +379,7 @@ body {
   .patient-details.panel .row:nth-child(even) {
     background: #fff;
   }
-  ul.tabs {
+  ul.tab {
     list-style-type: none;
     margin: 0;
     padding: 0;
