Change graph to vertical bars.

--- a/app/views/dashboards/index.html.haml
+++ b/app/views/dashboards/index.html.haml
@@ -67,7 +67,7 @@
             = I18n.t('dashboard.index.devices_not_responding')
         .box-content
           #chartDevicesNotResponding{:style => "height: 200px; width: 100%;"}
-            = react_component 'CanvasJsChart', chartDiv: 'chartDevicesNotResponding', chartData: Extras::Charts::HorizontalColumns.new(@dashboard_report.devices_not_responding).render
+            = react_component 'CanvasJsChart', chartDiv: 'chartDevicesNotResponding', chartData: Extras::Charts::VerticalColumns.new(@dashboard_report.devices_not_responding).render
       .small-5.columns.box
         = render partial: 'error_codes', locals: { error_codes_by_device: @dashboard_report.error_codes_by_device }
 
