--- a/app/views/device_models/_publish.haml
+++ b/app/views/device_models/_publish.haml
@@ -20,4 +20,4 @@
   - if can_publish
     .row
       .col
-        %button{type: 'submit', class: 'btn-secondary', name: 'publish', value: "1", id: 'device-model-publish'}  Publish
+        %button{type: 'submit', class: 'btn-primary', name: 'publish', value: "1", id: 'device-model-publish'}  Publish
