--- a/app/views/patients/_patient_summary.haml
+++ b/app/views/patients/_patient_summary.haml
@@ -33,15 +33,19 @@
           %label
             = Patient.human_attribute_name(:entity_id)
           = patient.entity_id
+        %li
+          %label
+            = Patient.human_attribute_name(:nickname)
+          = patient.nickname
         - patient.addresses.each do |address|
           %li
             %label
               = Patient.human_attribute_name(:address)
             = Presenters::Patients.show_full_address(address)
-          %li
-            %label
-              = Patient.human_attribute_name(:created_at)
-            = I18n.l(patient.created_at, format: :long)
+        %li
+          %label
+            = Patient.human_attribute_name(:created_at)
+          = I18n.l(patient.created_at, format: :long)
             
         - if has_access?(@patient, Policy::Actions::UPDATE_PATIENT)
           %ul.button-container
