--- a/app/views/device_models/new.haml
+++ b/app/views/device_models/new.haml
@@ -1,11 +1,11 @@
 - content_for(:subheader) do
-  .row.center.add-new
+  .row.center.add-new.collapse
     .col.pe-10
-      .row
-        .col
-          %h2
-            = link_to device_models_path, class: 'side-link', title: I18n.t('views.back') do
-              = image_tag "arrow-left-white.png"
-            New Device Model
-
-= render 'form'
+      %h2
+        = link_to device_models_path, class: 'side-link', title: I18n.t('views.back') do
+          = image_tag "arrow-left-white.png"
+        New Device Model
+  
+  .testflow
+    .container
+      = render 'form'
