added settings page policy

--- a/app/policies/owner/institution.json.erb
+++ b/app/policies/owner/institution.json.erb
@@ -24,6 +24,7 @@
         "testResult?institution=<%= institution_id %>",
         "encounter?institution=<%= institution_id %>",
         "alert?institution=<%= institution_id %>",
+        "settingsPage?institution=<%= institution_id %>",
         "pageHeader?institution=<%= institution_id %>"
       ],
       "action": "*",
